[package]
name = "nomoreord"
version = "0.1.0"
authors = ["mason"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.27.0", features = ["yaml"]}

[lib]
name = "NoMoreOrd"
path = "src/main.rs"

[[bin]]
name = "NoMoreOrd"
path = "src/main.rs"
